--- a/local/assets/styles/profile.css
+++ b/local/assets/styles/profile.css
@@ -1062,7 +1062,7 @@ body {
   box-shadow: 0px 25px 50px -16px rgba(97,119,120,0.3);
 }
 .ag-shop-profile-order__container {
-  border: 1px dashed transparent;
+  border: 1px solid transparent;
   padding: 9px 4px 0 4px;
   border-radius: 3px;
   transition: 0.2s ease-out;
@@ -1112,7 +1112,6 @@ body {
 }
 .ag-shop-profile-order__info {
   padding-bottom: 18px;
-  max-width: 410px;
 }
 .ag-shop-profile-order__number {
   font-family: 'SF UI Text', Arial, sans-serif;
@@ -1137,8 +1136,8 @@ body {
   font-size: 0.75rem;
   line-height: 1.7;
   float: right;
-  padding-left: 29px;
-  min-width: 185px;
+  padding-right: 29px;
+  padding-left: 10px;
 }
 .ag-shop-profile-order--active .ag-shop-profile-order__status {
   color: #0eb0a0;
@@ -1159,7 +1158,7 @@ body {
   width: 9px;
   height: 9px;
   border-radius: 50%;
-  left: 10px;
+  right: 10px;
   top: 5px;
 }
 .ag-shop-profile-order--active .ag-shop-profile-order__status::before {
@@ -1196,6 +1195,7 @@ body {
   color: #7b8693;
   transition: 0.2s ease-out;
   padding: 10px;
+  font-size: 0;
 }
 .ag-shop-profile-order__control span {
   display: inline-block;
@@ -1258,7 +1258,8 @@ body {
 .ag-shop-profile-order__icon {
   display: inline-block;
   vertical-align: middle;
-  background-image: url("../images/icons.svg");
+  background-image: url("../images/icons.png");
+  background-image: linear-gradient(to bottom, transparent, transparent), url("../images/icons.svg");
   background-repeat: no-repeat;
 }
 .ag-shop-profile-order__icon--print {
@@ -1626,10 +1627,6 @@ body {
 
   .ag-shop-profile-order__info {
     padding-right: 20px;
-  }
-
-  .ag-shop-profile-order__number {
-    display: block;
   }
 
   .ag-shop-profile-order__points {
