--- a/www/local/assets/styles/mod.css
+++ b/www/local/assets/styles/mod.css
@@ -253,4 +253,7 @@ input.ag-balls[type="radio"]{
 
 
 
-
+.ag-shop-filter__trigger, .ag-shop-filter__trigger--active{
+    color: rgba(255, 194, 14, 1) !important;
+    border-bottom: 1px dashed rgba(255, 194, 14, 1) !important;
+}
