--- a/www/local/assets/styles/partners.css
+++ b/www/local/assets/styles/partners.css
@@ -6,6 +6,11 @@
         margin-top: 10px;
     }
 
+    .partners-main tr:hover{
+        background-color: #F4F4F4;
+    }
+
+
     .partners-main th{
         text-align: center;
         vertical-align: middle !important;
@@ -40,6 +45,66 @@
 .partners-menu{
     margin-bottom: 10px !important;
 }
+
+.td-date{
+    text-align: center;
+    vertical-align: middle !important;
+}
+
+.td-num{
+    text-align: right;
+    vertical-align: middle !important;
+}
+
+.td-status{
+    text-align: center;
+    vertical-align: middle !important;
+}
+
+.td-checkbox{
+    text-align: center;
+    vertical-align: middle !important;
+}
+
+.td-email{
+    text-align: left;
+    vertical-align: middle !important;
+}
+    .td-email a{
+        color:inherit !important;
+    }
+
+.td-action{
+    text-align: center;
+    vertical-align: middle !important;
+}
+
+.td-product{
+    text-align: left;
+    vertical-align: middle !important;
+}
+    .td-product a{
+        color:inherit !important;
+    }
+
+.td-section{
+    text-align: left;
+    vertical-align: middle !important;
+}
+    .td-section a{
+        color:inherit !important;
+    }
+
+.td-phone{
+    text-align: right;
+    vertical-align: middle !important;
+}
+    .td-phone a{
+        color:inherit !important;
+    }
+
+
+
 
 div.partners-date{
     width: 120px;
@@ -78,7 +143,9 @@ div.partners-date{
 
 
 #filter-status{
-    width: 100px;
+    width: 80px;
+    padding-left: 2px;
+    padding-right: 2px;
 }
 
 #filter-storage{
@@ -86,7 +153,7 @@ div.partners-date{
     float: left;
 }
 
-#filter-manufacturer{
+#filter-man{
     width: 50%;
     float: left;
 }
