Веб-морда для партнёров:Форма выгрузки заказов:Форма отказа

--- a/www/local/assets/styles/partners.css
+++ b/www/local/assets/styles/partners.css
@@ -195,6 +195,7 @@ div.partners-date{
 .partners-product-photo{
     float: left;
     margin: 10px;
+    width: 420px;
 }
 
 #order-products table{
