--- a/www/local/assets/styles/catalog.css
+++ b/www/local/assets/styles/catalog.css
@@ -909,7 +909,7 @@ body {
 }
 .ag-shop-filter__filters {
   padding: 20px 0 24px;
-  background: url("../images/bg__pattern--green.png");
+  background: url("../images/imgpsh_fullsize.png");
 }
 .ag-shop-filter__filters-item {
   font-family: 'SF UI Text', Arial, sans-serif;
@@ -988,7 +988,7 @@ input:checked + .ag-shop-filter__variants-item {
 }
 .ag-shop-filter__confirm {
   padding: 24px 0 24px;
-  background: url("../images/bg__pattern--green.png");
+  background: url("../images/imgpsh_fullsize.png");
 }
 .ag-shop-filter__confirm-button {
   background: none;
@@ -1063,12 +1063,12 @@ input:checked + .ag-shop-filter__variants-item {
   display: inline-block;
   margin-top: 35px;
   padding: 10px 82px;
-  border: 1px solid #0eb0a0;
+  border: 1px solid rgba(0,122,108,1);
   border-radius: 20px;
   font-family: 'SF UI Text', Arial, sans-serif;
   font-size: 16px;
   font-size: 1rem;
-  color: #0eb0a0;
+  color: rgba(0,122,108,1);
   text-decoration: none;
 }
 .ag-shop-catalog__more-button:hover {
