--- a/www/local/assets/styles/components.css
+++ b/www/local/assets/styles/components.css
@@ -1032,7 +1032,7 @@
   width: 170px;
   height: 170px;
   border-radius: 50%;
-  background: #f6ef8a;
+  background: rgba(255,194,14,1);
   z-index: -1;
 }
 .ag-shop-slider-card__points-count {
