--- a/www/local/assets/styles/mod.css
+++ b/www/local/assets/styles/mod.css
@@ -380,3 +380,17 @@ input:checked + .ag-shop-filter__variants-item {
     background-position: 100%  100%;
     background-size: contain;
 }
+
+.ag-shop-card__image-info div.ag-shop-card__image-points{
+    content: '';
+    position: absolute;
+    top: -102px;
+    left: -92px;
+    display: block;
+    width: 170px;
+    height: 170px;
+    border-radius: 50%;
+    background: rgba(255,194,14,1);
+    padding-top: 90px;
+    padding-left: 60px;
+}
