https://jira.altarix.ru/browse/AG-105

--- a/www/local/assets/styles/mod.css
+++ b/www/local/assets/styles/mod.css
@@ -394,3 +394,7 @@ input:checked + .ag-shop-filter__variants-item {
     padding-top: 90px;
     padding-left: 60px;
 }
+
+.ag-shop-profile-tabs__link{
+    display: inline;
+}
