https://yadi.sk/i/kZrexyMv3LRnEh поправить верстку в карточке товара. Иконка наезжает на цену

--- a/www/local/assets/styles/mod.css
+++ b/www/local/assets/styles/mod.css
@@ -413,3 +413,8 @@ input:checked + .ag-shop-filter__variants-item {
     position:relative;
     z-index: 9999;
 }
+
+
+.ag-shop-card__image-badges{
+    margin-top: 64px !important;
+}
