--- a/www/local/assets/styles/semantic.css
+++ b/www/local/assets/styles/semantic.css
@@ -23,4 +23,12 @@ h4{
     line-height: 27px !important;
 }
 
-
+.ag-shop-card__container p{
+    text-indent: 16px;
+    -webkit-margin-before: 0px;
+    -webkit-margin-after: 0px;
+    -webkit-margin-start: 0px;
+    -webkit-margin-end: 0px;
+    margin-top:10px;
+    margin-bottom: 10px;
+}
