https://party.altarix.ru/issues/94412

--- a/www/local/assets/styles/semantic.css
+++ b/www/local/assets/styles/semantic.css
@@ -32,3 +32,10 @@ h4{
     margin-top:10px;
     margin-bottom: 10px;
 }
+
+.ag-shop-card__container img{
+    width: 98%;
+    margin: 1%;
+    float: left;
+    clear: both;
+}
