https://party.altarix.ru/issues/94412

--- a/www/local/assets/styles/semantic.css
+++ b/www/local/assets/styles/semantic.css
@@ -34,8 +34,6 @@ h4{
 }
 
 .ag-shop-card__container img{
-    width: 98%;
+    max-width: 98%;
     margin: 1%;
-    float: left;
-    clear: both;
 }
