--- a/www/local/assets/styles/mod.css
+++ b/www/local/assets/styles/mod.css
@@ -444,12 +444,12 @@ div.ag-shop-menu{
 
 
 div.ag-shop-mob-nav{
-    height: 26px;
+    height: 24px;
     background-color: rgba(12,142,130,1);
     color: #fff;
     font-family: 'SF UI Text', Arial, sans-serif;
     font-size: 0.8rem;
-    text-align: center;
+    text-align: left;
     position: fixed;
     top: 0px;
     left: 0px;
@@ -457,8 +457,8 @@ div.ag-shop-mob-nav{
     z-index: 9998;
     overflow: hidden;
     white-space: nowrap;
-    padding-top: 8px;
-    padding-left: 0px;
+    padding-top: 10px;
+    padding-left: 36px;
     border-bottom: 1px rgba(12,142,130,1);
     text-shadow: 0 0 3px rgba(0,0,0,0.4);
 }
