--- a/www/local/assets/styles/mod.css
+++ b/www/local/assets/styles/mod.css
@@ -208,6 +208,7 @@ input.ag-balls[type="radio"]{
 
 .ag-shop-nav__link--active, .ag-shop-footer__copy{
     background-color: rgba(0,122,108,1) !important;
+    cursor: pointer;
 }
 
 .ag-shop-footer__links{
