--- a/www/local/assets/styles/components.css
+++ b/www/local/assets/styles/components.css
@@ -657,6 +657,7 @@
   font-size: 1.75rem;
   font-weight: 900;
   color: #7b8693;
+  white-space: nowrap;
 }
 .ag-shop-item-card--dark .ag-shop-item-card__points-count,
 .ag-shop-item-card:hover .ag-shop-item-card__points-count {
